logoutput/config/ping-pong-app/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: pingpong-rollout
  namespace: exercises
spec:
  replicas: 4
  selector:
    matchLabels:
      app: pingpong
  strategy:
    canary:
      steps:
        - setWeight: 50
        - analysis:
            templates:
              - templateName: pingpong-cpu-usage
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      volumes:
        - name: shared-log
          emptyDir: {}
      containers:
        - name: pingpong
          image: PINGPONG/IMAGE
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/files
          readinessProbe:
            httpGet:
              path: /actuator/health/db
              port: 4040
            initialDelaySeconds: 20
            periodSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/db
              port: 4040
            initialDelaySeconds: 40
            periodSeconds: 5
            failureThreshold: 5
