logoutput/config/ping-pong-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - port: 4234
      protocol: TCP
      targetPort: 4040
